examples/generated/go/wavego/notification.fbpb.go
// Code generated by proto2fixed. DO NOT EDIT.
// source: examples/notification.proto

package wavego

import (
	"encoding/binary"
	"fmt"
	"math"
)

// Schema metadata
const NotificationSchemaVersion = "v1.0.0"
const NotificationSchemaEndian = "little"
const NotificationMessageIdSize = 4

// Notification Message Definitions

// NotificationSize is the fixed binary size
const NotificationSize = 21

// NotificationMessageId is the size of the message ID
const NotificationMessageId = 1

// NotificationDecoder decodes binary data to a Notification struct
type NotificationDecoder struct {
	endian binary.ByteOrder
}

// NewNotificationDecoder creates a new decoder
func NewNotificationDecoder() *NotificationDecoder {
	return &NotificationDecoder{
		endian: binary.LittleEndian,
	}
}

// Decode decodes binary data to a Notification struct
func (d *NotificationDecoder) Decode(data []byte) (*Notification, error) {
	if len(data) != NotificationSize {
		return nil, fmt.Errorf("invalid data size: got %d, want %d", len(data), NotificationSize)
	}

	result := &Notification{}

	// id (field 1, offset: 0, size: 4)
	result.Id = d.endian.Uint32(data[0 : 0+4])

	// type (field 2, offset: 4, size: 4)
	result.Type = NotificationType(d.endian.Uint32(data[4 : 4+4]))

	// Oneof payload
	result.Payload.Discriminator = data[8]

	switch result.Payload.Discriminator {
	case 0:
	case 3: // system
		// system (field 3, offset: 9, size: 8)
		{
			systemNestedData := data[9:17]

			// code (field 1, offset: 0, size: 4)
			result.Payload.System.Code = d.endian.Uint32(systemNestedData[0 : 0+4])

			// value (field 2, offset: 4, size: 4)
			result.Payload.System.Value = math.Float32frombits(d.endian.Uint32(systemNestedData[4 : 4+4]))
		}

	case 4: // user
		// user (field 4, offset: 9, size: 8)
		{
			userNestedData := data[9:17]

			// user_id (field 1, offset: 0, size: 4)
			result.Payload.User.UserId = d.endian.Uint32(userNestedData[0 : 0+4])

			// message_code (field 2, offset: 4, size: 4)
			result.Payload.User.MessageCode = d.endian.Uint32(userNestedData[4 : 4+4])
		}

	case 5: // error
		// error (field 5, offset: 9, size: 12)
		{
			errorNestedData := data[9:21]

			// error_code (field 1, offset: 0, size: 4)
			result.Payload.Error.ErrorCode = d.endian.Uint32(errorNestedData[0 : 0+4])

			// line_number (field 2, offset: 4, size: 4)
			result.Payload.Error.LineNumber = d.endian.Uint32(errorNestedData[4 : 4+4])

			// severity (field 3, offset: 8, size: 4)
			result.Payload.Error.Severity = math.Float32frombits(d.endian.Uint32(errorNestedData[8 : 8+4]))
		}

	default:
		return nil, fmt.Errorf("oneof payload: unknown discriminator value: %d", result.Payload.Discriminator)
	}

	return result, nil
}

// NotificationEncoder encodes a Notification struct to binary data
type NotificationEncoder struct {
	endian binary.ByteOrder
}

// NewNotificationEncoder creates a new encoder
func NewNotificationEncoder() *NotificationEncoder {
	return &NotificationEncoder{
		endian: binary.LittleEndian,
	}
}

// Encode encodes a Notification struct to binary data
func (e *NotificationEncoder) Encode(msg *Notification) ([]byte, error) {
	buffer := make([]byte, NotificationSize)

	// id (field 1)
	e.endian.PutUint32(buffer[0:0+4], msg.Id)

	// type (field 2)
	e.endian.PutUint32(buffer[4:4+4], uint32(msg.Type))

	// Oneof payload
	buffer[8] = msg.Payload.Discriminator

	switch msg.Payload.Discriminator {
	case 0:
	case 3: // system
		// system (field 3)
		// code (field 1)
		e.endian.PutUint32(buffer[9:9+4], msg.Payload.System.Code)

		// value (field 2)
		e.endian.PutUint32(buffer[13:13+4], math.Float32bits(msg.Payload.System.Value))

	case 4: // user
		// user (field 4)
		// user_id (field 1)
		e.endian.PutUint32(buffer[9:9+4], msg.Payload.User.UserId)

		// message_code (field 2)
		e.endian.PutUint32(buffer[13:13+4], msg.Payload.User.MessageCode)

	case 5: // error
		// error (field 5)
		// error_code (field 1)
		e.endian.PutUint32(buffer[9:9+4], msg.Payload.Error.ErrorCode)

		// line_number (field 2)
		e.endian.PutUint32(buffer[13:13+4], msg.Payload.Error.LineNumber)

		// severity (field 3)
		e.endian.PutUint32(buffer[17:17+4], math.Float32bits(msg.Payload.Error.Severity))

	default:
		return nil, fmt.Errorf("oneof payload: unknown discriminator value: %d", msg.Payload.Discriminator)
	}

	return buffer, nil
}

// SystemNotification Message Definitions

// SystemNotificationSize is the fixed binary size
const SystemNotificationSize = 8

// UserNotification Message Definitions

// UserNotificationSize is the fixed binary size
const UserNotificationSize = 8

// ErrorNotification Message Definitions

// ErrorNotificationSize is the fixed binary size
const ErrorNotificationSize = 12

type NotificationType int32

const (
	NOTIFICATION_UNKNOWN NotificationType = 0
	NOTIFICATION_SYSTEM  NotificationType = 1
	NOTIFICATION_USER    NotificationType = 2
	NOTIFICATION_ERROR   NotificationType = 3
)

// Oneof for different notification payloads
// All variants overlay at offset 8
// Size = max(SystemNotif(8), UserNotif(8), ErrorNotif(12)) = 12 bytes
type NotificationPayloadOneof struct {
	Discriminator uint8              `json:"discriminator"`
	System        SystemNotification `json:"system,omitempty"`
	User          UserNotification   `json:"user,omitempty"`
	Error         ErrorNotification  `json:"error,omitempty"`
}

type Notification struct {
	// Notification ID
	Id uint32 `json:"id"`
	// Which variant is active
	Type    NotificationType         `json:"type"`
	Payload NotificationPayloadOneof `json:"payload"`
}

type SystemNotification struct {
	// Size: 8 bytes
	Code uint32 `json:"code"`
	// Associated value
	Value float32 `json:"value"`
}

type UserNotification struct {
	// Size: 8 bytes
	UserId uint32 `json:"user_id"`
	// Message code (instead of string)
	MessageCode uint32 `json:"message_code"`
}

type ErrorNotification struct {
	// Size: 12 bytes
	ErrorCode uint32 `json:"error_code"`
	// Line number where error occurred
	LineNumber uint32 `json:"line_number"`
	// Error severity (0.0-1.0)
	Severity float32 `json:"severity"`
}

// notificationHelpers scope for helper functions
type notificationHelpers struct{}

var (
	nH = notificationHelpers{}
)

// decodeString extracts a null-terminated string from fixed-size buffer
func (notificationHelpers) decodeString(data []byte) string {
	// Find null terminator
	nullIdx := -1

	for i, b := range data {
		if b == 0 {
			nullIdx = i
			break
		}
	}

	if nullIdx == -1 {
		// No null terminator, use entire buffer
		return string(data)
	}

	return string(data[:nullIdx])
}

// encodeString writes a string to fixed-size buffer with null termination
func (notificationHelpers) encodeString(str string, size int) []byte {
	buf := make([]byte, size)

	// Truncate if necessary, leave room for null terminator
	maxLen := size - 1

	if len(str) > maxLen {
		str = str[:maxLen]
	}

	copy(buf, []byte(str))

	// buf is zero-initialized, so null terminator already in place
	return buf
}
